# inter_thread_messaging

./: CMakeLists.txt
src/: main.cpp
src/common/: affinity.cpp  affinity.hpp  time.cpp  time.hpp  topic.hpp
src/listener/: listener_node.cpp  listener_node.hpp
src/msg/: msg.cpp  struct.hpp
src/talker/: talker_node.cpp  talker_node.hpp
